<resources>
    <string name="app_name">TranslatorByAdil</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="write_something">Write something</string>
    <string name="rightarrow">rightArrow</string>
    <string name="translate">Translate:</string>
    <string-array name="select_lang">
        <item>Russian</item>
        <item>English</item>
        <item>German</item>
        <item>Kyrgyz</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Spain</item>
        <item>Japanese</item>
    </string-array>
    <string-array name="select_lang2">
        <item>English</item>
        <item>Russian</item>
        <item>German</item>
        <item>Kyrgyz</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Spain</item>
        <item>Japanese</item>
    </string-array>
</resources>
